# live-sports-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  sports-platform-prd.md
.github/workflows/: proto-check.yml
migrations/: 001_initial.sql
schemas/: EVOLUTION.md  __init__.py  base.py  event_ids.md  event_ids.py  mlb.py  proto_utils.py
schemas/proto/: README.md
schemas/proto/mlb/v1/: events.proto  events_pb2.py  events_pb2.pyi
services/common/: __init__.py  config.py  logging.py  metrics.py  sentry.py
services/enricher/: __main__.py  consumer.py  handler.py  state.py
services/mlb_ingestor/: __main__.py  cursor.py  ingestor.py  mlb_client.py  parser.py  publisher.py  storage.py
services/persistence_consumer/: __main__.py  consumer.py  dlq.py  errors.py  handler.py  metrics.py  storage.py
services/query_api/: __main__.py  app.py  db.py
services/replay/: __main__.py  publisher.py  reader.py  service.py
tests/: test_cursor.py  test_enricher.py  test_event_ids.py  test_parser.py  test_persistence_consumer.py  test_publisher.py  test_replay.py
