[project]
name = "live-sports-platform"
version = "0.1.0"
description = "Distributed streaming platform for live MLB and NFL events"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "redis>=5.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "sentry-sdk>=2.3",
    "orjson>=3.10",
    "aiokafka>=0.11",
    "protobuf>=5.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "grpcio-tools>=1.64",
    "mypy-protobuf>=3.6",
    "types-protobuf>=5.0",
    "testcontainers[kafka,postgres]>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: integration tests that spin up containers (Kafka, Postgres). Slow.",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
